manifests/samples-kubernetes/pod-daemonset.yml
apiVersion: apps/v1

kind: DaemonSet

metadata:
  name: "nginx-daemonset"
  namespace: "default"

spec:
  selector:
    matchLabels:
      app: "nginx-daemonset"
  template:
    metadata:
      labels:
        app: "nginx-daemonset"
    spec:
      containers:
        - name: "nginx-daemonset"
          image: "nginx:alpine"
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 80
