manifests/samples-kubernetes/pod-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: "nginx-deployment"
  namespace: "default"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nginx-deployment"
  template:
    metadata:
      labels:
        app: "nginx-deployment"
    spec:
      containers:
        - name: "nginx-deployment"
          image: "nginx:alpine"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
