manifests/samples-kubernetes/service-loadbalancer.yml
apiVersion: v1

kind: Pod

metadata:
  name: "nginx-pod"
  namespace: "default"

spec:
  containers:
    - name: "nginx-pod"
      image: "nginx:alpine"
      resources:
        requests:
          memory: "64Mi"
          cpu: "200m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 20
      ports:
        - containerPort: 80
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: "hello"
  namespace: "default"

spec:
  replicas: 3
  selector:
    matchLabels:
      role: "hello"
  template:
    metadata:
      labels:
        role: "hello"
    spec:
      containers:
        - name: "hello"
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080 # Input
---
apiVersion: v1

kind: Service

metadata:
  name: "hello"
  namespace: "default"

spec:
  type: LoadBalancer
  selector:
    role: "hello"
  ports:
    - name: http
      port: 3000 # Input
      targetPort: 8080 # Output
    - name: https
      port: 443 # Input
      targetPort: 8080 # Output
